k8s/ingress.yml
# https://kubernetes.io/docs/concepts/services-networking/ingress/#the-ingress-resource

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: static-ingress
  namespace: static
spec:
  rules:
  - host: static.owmdomain.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: static-website
            port:
              number: 80
